[gd_scene load_steps=9 format=3 uid="uid://cjfr8pj5kdrxb"]

[ext_resource type="Texture2D" uid="uid://caxtp7lb502aq" path="res://background/Porton.jpg" id="1_6dswq"]
[ext_resource type="Script" path="res://Scripts/inicio_dialog.gd" id="2_guwcd"]
[ext_resource type="FontFile" uid="uid://77tm5kpkgub6" path="res://Fonts/comickbook/ComickBook_Simple.ttf" id="2_np84k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7aw0s"]

[sub_resource type="Animation" id="Animation_i0amt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0obv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1tse1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bty0q"]
_data = {
"RESET": SubResource("Animation_i0amt"),
"fade_in": SubResource("Animation_l0obv"),
"fade_out": SubResource("Animation_1tse1")
}

[node name="Porton" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Porton" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 360)
scale = Vector2(0.998437, 0.75)
texture = ExtResource("1_6dswq")

[node name="caja_dialogo" type="Node2D" parent="."]
position = Vector2(614, 376)

[node name="Dialogo" type="Sprite2D" parent="caja_dialogo"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(28.5, 194.5)
scale = Vector2(1141, 191)
texture = SubResource("CanvasTexture_7aw0s")

[node name="Caja_nombre" type="Node2D" parent="."]

[node name="Nombre" type="Sprite2D" parent="Caja_nombre"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(66.025, 389.29)
scale = Vector2(135.09, 55.299)
texture = SubResource("CanvasTexture_7aw0s")
offset = Vector2(0.54, 0.94)

[node name="Dialogo_inicial" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Inicio" type="Control" parent="Dialogo_inicial"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_guwcd")

[node name="Dialogo_inicio" type="RichTextLabel" parent="Dialogo_inicial/Inicio"]
layout_mode = 0
offset_left = 92.0
offset_top = 500.0
offset_right = 1166.0
offset_bottom = 646.0
theme_override_fonts/normal_font = ExtResource("2_np84k")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="nombres" type="Control" parent="Dialogo_inicial"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="caja_nombre" type="RichTextLabel" parent="Dialogo_inicial/nombres"]
layout_mode = 0
offset_left = 81.0
offset_top = 423.0
offset_right = 196.0
offset_bottom = 462.0
theme_override_fonts/normal_font = ExtResource("2_np84k")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bty0q")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
offset_right = 1282.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="Transition" to="Dialogo_inicial/Inicio" method="_on_transition_animation_finished"]
